# UrbanRAG

./: PLUReglementInserter.py  README.md  evaluation.ipynb  evaluation_resultats.xlsx  main.py  pipeline_rag.ipynb  plu_reglements.rb  pyproject.toml  rag_plu.py
