[tool.poetry]
name = "PLU"
version = "0.1.0"
description = ""
authors = ["Ophélie Engasser <oph034@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.1.12"
PyMuPDF = "1.24.5"
fastembed = "^0.2.4"
langchainhub = "^0.1.14"
faiss-cpu = "1.8.0.post1"
watchdog = "^3.0.0"
protobuf = "3.20.3"
pandas = "2.2.2"
psycopg2 = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"